# mcp-session

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
docs/adr/: 0001-bounded-session-management.md
src/: lib.rs
tests/: session_limits.rs
